fixed contact page icons alignment

--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -79,5 +79,10 @@
             width: 25px;
             height: 25px;
         }
+
+        &__info-icon-wrapper
+        {
+            padding: 0.2rem 1rem;
+        }
     }
 }
